--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap" rel="stylesheet">
    <title>E-learn  </title>
 
-   <center><img src= Capture.png></center>
+     <center><h1>E - Learn</h1></center>
    <center>
 
   <div>
